2007-06-11 [paul]	2.9.2cvs53

	* src/mainwindow.c
	* src/prefs_logging.c
		rename 'Protocol Log' to 'Network Log'
		and some function renaming

2007-06-10 [wwp]	2.9.2cvs52

	* src/gtk/pluginwindow.c
		Revert 2.9.2cvs51.

2007-06-10 [wwp]	2.9.2cvs51

	* src/gtk/pluginwindow.c
		Fix button bar in plugin window, was centered and not
		behaving like other dialogs w/ such button bar.

2007-06-08 [wwp]	2.9.2cvs50

	* src/compose.c
	* src/compose.h
	* src/main.c
	* src/mainwindow.c
	* src/mainwindow.h
		Provide a way out of automatic draft saving on IMAP, when
		exiting offline.
		Prevent drafting while sending and quitting while sending.
		Thanks for Colin.



2007-06-08 [wwp]	2.9.2cvs49

	* src/prefs_account.c
	* src/gtk/prefswindow.c
	* src/gtk/prefswindow.h
		Activate the Basic page when opening account prefs.

2007-06-08 [wwp]	2.9.2cvs48

	* src/common/socket.c
		Don't crash if fork() fails, thanks to Colin.

2007-06-08 [wwp]	2.9.2cvs47

	* src/gtk/prefswindow.c
		Wrap some long lines, and reset horizontal scroller's adjusment
		(this was already done, vertically), when changing tab (not page)
		in prefs windows.

2007-06-08 [paul]	2.9.2cvs46

	* src/common/utils.c
		use gethostname() instead of uname()
		based on a patch by Michael Hughes
		<Sylpheed-Claws_user@thehugheslogcabin.net>

2007-06-07 [wwp]	2.9.2cvs45

	* src/prefs_common.c
		Fix some useless warnings, thanks to Colin.

2007-06-06 [colin]	2.9.2cvs44

	* src/ldapupdate.c
		Fix strange allocations. 

2007-06-06 [colin]	2.9.2cvs43

	* src/ldapupdate.c
		Patch by Michael Rasmussus to help
		bug 1232

2007-06-05 [wwp]	2.9.2cvs42

	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_quote.c
	* src/quote_fmt.c
	* src/quote_fmt.h
		Per-folder templates can now be applied recursively.
		Always save per-folder templates (formats were erroneously
		saved only if they were enabled).
		Check for validity of quotation marks everywhere there
		are defined.

2007-06-05 [wwp]	2.9.2cvs41

	* src/inc.c