@@ -2629,3 +2629,4 @@
 ( cvs diff -u -r 1.5.2.45 -r 1.5.2.46 src/gtk/pluginwindow.c;  ) > 2.9.2cvs51.patchset
 ( cvs diff -u -r 1.5.2.46 -r 1.5.2.47 src/gtk/pluginwindow.c;  ) > 2.9.2cvs52.patchset
 ( cvs diff -u -r 1.274.2.190 -r 1.274.2.191 src/mainwindow.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/prefs_logging.c;  ) > 2.9.2cvs53.patchset
+( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/prefs_logging.c;  ) > 2.9.2cvs54.patchset
